Fix SVG positioning

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -38,7 +38,7 @@ This scenario plays out over 14 rounds.
 
 % \vspace*{\fill}\columnbreak
 
-\textbf{Town Buildings:} \svg{bronze} Dwelling, \svg{silver} Dwelling, City Hall, Citadel
+\textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling, City Hall, Citadel
 
 \textbf{Bonus:} Add a ``war machine'' of your choice to your hand.
 
