--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -37,7 +37,7 @@ This scenario plays out over 13 rounds.
   \item A Few Magogs
 \end{itemize}
 
-\textbf{Town Buildings:} \svg{bronze} Dwelling, City Hall
+\textbf{Town Buildings:} \svgunit{bronze} Dwelling, City Hall
 
 \vspace*{\fill}\columnbreak
 
