--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -35,7 +35,7 @@ This scenario plays out over 16 rounds.
   \item A Pack of Familiars
 \end{itemize}
 
-\textbf{Town Buildings:} \svg{bronze} Dwelling, \svg{silver} Dwelling
+\textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling
 
 \vspace*{\fill}\columnbreak
 
