--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -26,11 +26,11 @@ This scenario is played over 8 rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svg{bronze} units of your choice.
-  \item A Few \svg{bronze} units of your choice.
+  \item A Pack of \svgunit{bronze} units of your choice.
+  \item A Few \svgunit{bronze} units of your choice.
 \end{itemize}
 
-\textbf{Town Buildings:} \svg{bronze} Dwelling
+\textbf{Town Buildings:} \svgunit{bronze} Dwelling
 
 \textbf{Map tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.
 
@@ -65,7 +65,7 @@ There are unflagged Mines or Settlements left in map at the end of Round 8.
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-    \item You can't build a \svg{golden} Dwelling.
+    \item You can't build a \svgunit{golden} Dwelling.
     \item You can give Units to another player, even outside your turn, if one of your Heroes is:
     \begin{itemize}
         \item On the same Map tile as another player's Hero.
@@ -74,7 +74,7 @@ There are unflagged Mines or Settlements left in map at the end of Round 8.
     \end{itemize}
     \item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your faction's Unit pool (even if another player has one or more of your Units). This includes units you've previously given to another player.
     \item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.
-    \item For the last Mine/Settlement battle, add a \svg{golden} Neutral Unit. You have unlimited turns for this battle. You can't use Expert Diplomacy to skip this battle!
+    \item For the last Mine/Settlement battle, add a \svgunit{golden} Neutral Unit. You have unlimited turns for this battle. You can't use Expert Diplomacy to skip this battle!
     \item The first time you reach level IV, gain your second specialty.
     \item When you reach level IV, move your token on the level tracker to level III.
     \item Additionally, no player can:
