--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -25,13 +25,13 @@ This scenario plays out over ... rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \svg{bronze}...
-  \item A Pack \svg{silver}...
-  \item \svg{golden}
+  \item A Few \svgunit{bronze}...
+  \item A Pack \svgunit{silver}...
+  \item \svgunit{golden}
   \item \svg{azure}
 \end{itemize}
 
-\textbf{Town Buildings:} \svg{bronze} Dwelling...
+\textbf{Town Buildings:} \svgunit{bronze} Dwelling...
 
 \textbf{Bonus:} Choose one of the following options:
 \begin{itemize}
