--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -25,13 +25,13 @@ This scenario is played over ... rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \svg{bronze}...
-  \item A Pack \svg{silver}...
-  \item \svg{golden}
-  \item \svg{azure}
+  \item A Few \svgunit{bronze}...
+  \item A Pack \svgunit{silver}...
+  \item \svgunit{golden}
+  \item \svgunit{azure}
 \end{itemize}
 
-\textbf{Town Buildings:} \svg{bronze} Dwelling...
+\textbf{Town Buildings:} \svgunit{bronze} Dwelling...
 
 \textbf{Map tile Pool:} Each player takes X [random] Near/Far Map (A--B) Tiles...
 
