--- a/translations/emerald_island.tex/cs.po
+++ b/translations/emerald_island.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-02 23:46+0100\n"
+"POT-Creation-Date: 2024-07-03 17:00+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -96,8 +96,8 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\svg{bronze} units of your choice.\n"
-"  \\item A Few \\svg{bronze} units of your choice.\n"
+"  \\item A Pack of \\svgunit{bronze} units of your choice.\n"
+"  \\item A Few \\svgunit{bronze} units of your choice.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -181,10 +181,10 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/emerald_island.tex:34 clash/bloody_grail.tex:31
+#: coops/emerald_island.tex:34
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\svg{bronze} Dwelling\n"
+"\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling\n"
 "\n"
 msgstr ""
 
@@ -249,7 +249,7 @@ msgstr ""
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\\begin{itemize}\n"
-"    \\item You can't build a \\svg{golden} Dwelling.\n"
+"    \\item You can't build a \\svgunit{golden} Dwelling.\n"
 "    \\item You can give Units to another player, even outside your turn, if one of your Heroes is:\n"
 "    \\begin{itemize}\n"
 "        \\item On the same Map tile as another player's Hero.\n"
@@ -258,7 +258,7 @@ msgid ""
 "    \\end{itemize}\n"
 "    \\item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your faction's Unit pool (even if another player has one or more of your Units). This includes units you've previously given to another player.\n"
 "    \\item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.\n"
-"    \\item For the last Mine/Settlement battle, add a \\svg{golden} Neutral Unit. You have unlimited turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
+"    \\item For the last Mine/Settlement battle, add a \\svgunit{golden} Neutral Unit. You have unlimited turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
 "    \\item The first time you reach level IV, gain your second specialty.\n"
 "    \\item When you reach level IV, move your token on the level tracker to level III.\n"
 "    \\item Additionally, no player can:\n"
