--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -28,11 +28,11 @@ This scenario is played over 12 rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svg{bronze} units with the \textit{lowest} recruitment cost.
-  \item A Few \svg{bronze} units with the \textit{highest} recruitment cost.
+  \item A Pack of \svgunit{bronze} units with the \textit{lowest} recruitment cost.
+  \item A Few \svgunit{bronze} units with the \textit{highest} recruitment cost.
 \end{itemize}
 
-\textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
+\textbf{Town Buildings:} \svgunit{bronze} Dwelling, Citadel
 
 \textbf{Map tile Pool:} Each player takes 1 random Near (IV--V) Map tile and 1 random Far (II--III) Map tile. These tiles should not contain any Obelisks.
 
@@ -161,10 +161,10 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
   \textbf{Strength of Enemy Armies}\\
   \bigskip
 
-  \newcommand{\bronze}[0]{\svg[12]{bronze}}
-  \newcommand{\silver}[0]{\svg[12]{silver}}
-  \newcommand{\golden}[0]{\svg[12]{golden}}
-  \newcommand{\azure}[0]{\svg[12]{azure}}
+  \newcommand{\bronze}[0]{\svgunit[12]{bronze}}
+  \newcommand{\silver}[0]{\svgunit[12]{silver}}
+  \newcommand{\golden}[0]{\svgunit[12]{golden}}
+  \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
   \begin{tabularx}{\linewidth}{p{0.15\linewidth}XXXX} & \darkcell{Rounds 6 + 7} & \darkcell{Rounds 8 + 9} & \darkcell{Round 10}\\
   \darkcell[1.4]{Easy}
