--- a/sections/title_page.tex
+++ b/sections/title_page.tex
@@ -16,14 +16,15 @@
 
 % Render phantom SVGs before their use in tabular env
 \phantom{
-    \svg[0.1]{bronze}
-    \svg[0.1]{silver}
-    \svg[0.1]{golden}
-    \svg[0.1]{azure}
-    \svg[0.1]{gold}
-    \svg[0.1]{building_materials}
-    \svg[0.1]{valuables}
-    \svg[0.1]{attack_yellow}
-    \svg[0.1]{defense_yellow}
-    \svg[0.1]{damage-table}
+  \includesvg[height=0.1px]{\svgs/bronze.svg}
+  \includesvg[height=0.1px]{\svgs/bronze.svg}
+  \includesvg[height=0.1px]{\svgs/silver.svg}
+  \includesvg[height=0.1px]{\svgs/golden.svg}
+  \includesvg[height=0.1px]{\svgs/azure.svg}
+  \includesvg[height=0.1px]{\svgs/gold.svg}
+  \includesvg[height=0.1px]{\svgs/building_materials.svg}
+  \includesvg[height=0.1px]{\svgs/valuables.svg}
+  \includesvg[height=0.1px]{\svgs/attack_yellow.svg}
+  \includesvg[height=0.1px]{\svgs/defense_yellow.svg}
+  \includesvg[height=0.1px]{\svgs/damage-table.svg}
 }
