--- a/translations/title_page.tex/title_page.tex.pot
+++ b/translations/title_page.tex/title_page.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-06-29 16:10+0200\n"
+"POT-Creation-Date: 2024-07-03 17:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -37,10 +37,14 @@ msgstr ""
 
 #.  Render phantom SVGs before their use in tabular env
 #. type: Plain text
-#: sections/title_page.tex:29
+#: sections/title_page.tex:30
 msgid ""
-"\\phantom{ \\svg[0.1]{bronze} \\svg[0.1]{silver} \\svg[0.1]{golden} "
-"\\svg[0.1]{azure} \\svg[0.1]{gold} \\svg[0.1]{building_materials} \\svg[0.1]"
-"{valuables} \\svg[0.1]{attack_yellow} \\svg[0.1]{defense_yellow} \\svg[0.1]"
-"{damage-table} }"
+"\\phantom{ \\includesvg[height=0.1px]{\\svgs/bronze.svg} "
+"\\includesvg[height=0.1px]{\\svgs/bronze.svg} \\includesvg[height=0.1px]"
+"{\\svgs/silver.svg} \\includesvg[height=0.1px]{\\svgs/golden.svg} "
+"\\includesvg[height=0.1px]{\\svgs/azure.svg} \\includesvg[height=0.1px]"
+"{\\svgs/gold.svg} \\includesvg[height=0.1px]{\\svgs/building_materials.svg} "
+"\\includesvg[height=0.1px]{\\svgs/valuables.svg} \\includesvg[height=0.1px]"
+"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense_yellow."
+"svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
 msgstr ""
