Fix difficulty stars in The Hunt

--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -159,10 +159,10 @@ During this scenario:
   \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
   \begin{tabularx}{\linewidth}{XXXX}
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{silver}} \textbf{Normal}} &
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{golden}} \textbf{Hard}} &
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
   \lightcell[1.8]{No additional\\changes} &
   \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
   \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 30} &
@@ -224,10 +224,10 @@ During this scenario:
   \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
   \begin{tabularx}{\linewidth}{XXXX}
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{silver}} \textbf{Normal}} &
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{golden}} \textbf{Hard}} &
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
   \lightcell[2.8]{No additional\\changes} &
   \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
   \lightcell[2.8]{{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26 \\ +1 Counterattack}} &
@@ -288,14 +288,14 @@ During this scenario:
   \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
   \begin{tabularx}{\linewidth}{XXXX}
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{silver}} \textbf{Normal}} &
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{golden}} \textbf{Hard}} &
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
   \lightcell[2.5]{No additional\\changes} &
   \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 20} &
   \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32} &
-  \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 40 \\ +1 to corrosion armor decrease} \\
+  \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 40 \\ +1 to Corrosion armor decrease} \\
   \end{tabularx}
 }
 
@@ -360,10 +360,10 @@ During this scenario:
   \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
   \begin{tabularx}{\linewidth}{XXXX}
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{silver}} \textbf{Normal}} &
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{golden}} \textbf{Hard}} &
-  \darkcell{\raisebox{-.25\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
   \lightcell[1.6]{No additional\\changes} &
   \lightcell[1.6]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 18} &
   \lightcell[1.6]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26} &
