--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -188,7 +188,7 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: clash/the_hunt.tex:33
+#: clash/the_hunt.tex:33 campaigns/inferno_devilish_plan.tex:41
 #, fuzzy, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling, City Hall\n"
@@ -391,10 +391,10 @@ msgid ""
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
 "{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{azure}} "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{azure}} "
 "\\textbf{Impossible}}\\\\ \\lightcell[1.8]{No additional\\\\changes} & "
 "\\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 22} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
@@ -478,10 +478,10 @@ msgid ""
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
 "{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{azure}} "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{azure}} "
 "\\textbf{Impossible}}\\\\ \\lightcell[2.8]{No additional\\\\changes} & "
 "\\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 22} & \\lightcell[2.8]{{\\raisebox{-.25\\height}"
@@ -564,16 +564,16 @@ msgid ""
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
 "{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{azure}} "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{azure}} "
 "\\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\\\changes} & "
 "\\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 20} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
 "{\\includegraphics[height=15px]{\\images/hp.png}} 32} & \\lightcell[2.5]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"40 \\\\ +1 to corrosion armor decrease} \\\\ \\end{tabularx} }"
+"40 \\\\ +1 to Corrosion armor decrease} \\\\ \\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]{\\svg[12]"
 "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
@@ -654,10 +654,10 @@ msgid ""
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
 "{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{azure}} "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{azure}} "
 "\\textbf{Impossible}}\\\\ \\lightcell[1.6]{No additional\\\\changes} & "
 "\\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 18} & \\lightcell[1.6]{\\raisebox{-.25\\height}"
