--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -165,7 +165,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: clash/the_hunt.tex:33
+#: clash/the_hunt.tex:33 campaigns/inferno_devilish_plan.tex:41
 #, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling, City Hall\n"
@@ -339,10 +339,10 @@ msgid ""
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
 "{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{azure}} "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{azure}} "
 "\\textbf{Impossible}}\\\\ \\lightcell[1.8]{No additional\\\\changes} & "
 "\\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 22} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
@@ -395,10 +395,10 @@ msgid ""
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
 "{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{azure}} "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{azure}} "
 "\\textbf{Impossible}}\\\\ \\lightcell[2.8]{No additional\\\\changes} & "
 "\\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 22} & \\lightcell[2.8]{{\\raisebox{-.25\\height}"
@@ -450,16 +450,16 @@ msgid ""
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
 "{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{azure}} "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{azure}} "
 "\\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\\\changes} & "
 "\\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 20} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
 "{\\includegraphics[height=15px]{\\images/hp.png}} 32} & \\lightcell[2.5]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"40 \\\\ +1 to corrosion armor decrease} \\\\ \\end{tabularx} }"
+"40 \\\\ +1 to Corrosion armor decrease} \\\\ \\end{tabularx} }"
 msgstr ""
 
 #. type: wrapfigure
@@ -509,10 +509,10 @@ msgid ""
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
 "{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
-"\\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
-"& \\darkcell{\\raisebox{-.25\\height}{\\svgunit[20]{azure}} "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{azure}} "
 "\\textbf{Impossible}}\\\\ \\lightcell[1.6]{No additional\\\\changes} & "
 "\\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 18} & \\lightcell[1.6]{\\raisebox{-.25\\height}"
